# itzcoatl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  engine  itzcoatl  log  main.cpp  makefile  makefile_ubuntu  menu_scene.cpp  menu_scene.h  meson.build  play_scene.cpp  play_scene.h  pxr_engine.cpp  pxr_gfx.h  pxr_hud.cpp  pxr_hud.h  pxr_log.h  pxr_sfx.cpp  pxr_sfx.h  snake.cpp  snake.h  temp  todo
assets/: art.xcf  game_shot.xcf  kongtext_font.xcf  menu.xcf
assets/fonts/: kongtext.font  uto.font  uto_font.xcf
assets/rc/: engine.rc
assets/spritesheets/: menu_background.spritesheet  nuggets.spritesheet  quickbar.spritesheet  snakes.spritesheet
game/: CMakeLists.txt
game/include/: itzcoatl.h  menu_scene.h
img/: hud_figure.xcf
include/: play_scene.h  snake.h
include/pixiretro/: pxr_sfx.h
itzcoatl/: CMakeLists.txt
itzcoatl/include/: itzcoatl.h  play_scene.h
itzcoatl/src/: main.cpp  menu_scene.cpp  play_scene.cpp  snake.cpp
pixiretro/: CMakeLists.txt
pixiretro/include/: pxr_engine.h
pixiretro/src/: pxr_bmp.cpp  pxr_collision.cpp  pxr_engine.cpp  pxr_gfx.cpp  pxr_hud.cpp  pxr_input.cpp  pxr_log.cpp  pxr_particle.cpp  pxr_rand.cpp  pxr_rc.cpp  pxr_sfx.cpp  pxr_wav.cpp  pxr_xml.cpp  tinyxml2.cpp
readme_res/: hud_figure.xcf  nugget_table.xcf
source/: menu_scene.cpp  menu_scene.h  play_scene.cpp  play_scene.h  play_state.cpp  snake.cpp  snake.h
source/pixiretro/: pxr_engine.cpp  pxr_sfx.cpp
src/: play_scene.cpp
